--- a/index.html
+++ b/index.html
@@ -1,12 +1,278 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <!-- bootstrap css start -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
+        integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+    <!-- bootstrap css end -->
+    <!-- font awesome css start -->
+   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+   <!-- font awesome css end -->
+   <!-- google font start -->
+   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@800&display=swap" rel="stylesheet">
+   <!-- google font end -->
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    
+    <!-- nav start -->
+    <section class="nav-sec">
+        <nav>
+
+            <div class="container">
+                <nav class="navbar navbar-expand-lg navbar-light bg-light">
+                    <img class="w-25" src="images/ICON/Logo.png" alt="">
+                    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+                        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="collapse navbar-collapse" id="navbarNav">
+                        <ul class="navbar-nav ml-auto">
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">Books</a>
+                            </li>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">Courses</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">Others</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#contact">Blog</a>
+                            </li>
+                            <li class="nav-item nav-button">
+                                <a class="nav-link white-text" href="#">Sing in</a>
+                            </li>
+                        </ul>
+                    </div>
+                </nav>
+            </div>
+
+        </nav>
+    </section>
+    <!-- nav end -->
+
+
+    <!-- first section start -->
+    <section>
+        <div class="container green-light-bg">
+            <div class="row d-flex align-items-center ">
+                <div class="col-md-6">
+                    <h6>Are you ready to learn?</h6>
+                    <h2>Learn With Fun</h2>
+                    <h2>on <span class="green-helight">any schedule</span></h2>
+                    <p>Hey I am here.Please git down and get start your study.If you Want to get start please hit the
+                        get start button.</p>
+                    <button class="green-button">
+                        Get Started
+                    </button>
+                </div>
+                <div class="col-md-6">
+                    <img src="images/Photos/Illustration.png" alt="">
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- first section end -->
+
+    <!-- second section start -->
+    <section>
+        <div class="container icon">
+            <div class="row">
+                <div class="col-md-3">
+                    <div class="green-light-bg">
+                        <img src="images/ICON/book.png" alt="">
+                        <h5 class="d-flex justify-content-center">1800+Students</h5>
+                        <p class="d-flex justify-content-center"> Learn Anything</p>
+                    </div>
+                </div>
+                <div class="col-md-3">
+                    <div class="green-light-bg">
+                        <img src="images/ICON/Student.png" alt="">
+                        <h5 class="d-flex justify-content-center">1800+Students</h5>
+                        <p class="d-flex justify-content-center"> Learn Anything</p>
+                    </div>
+                </div>
+                <div class="col-md-3">
+                    <div class="green-light-bg">
+                        <img src="images/ICON/Test.png" alt="">
+                        <h5 class="d-flex justify-content-center">1800+Students</h5>
+                        <p class="d-flex justify-content-center"> Learn Anything</p>
+                    </div>
+                </div>
+                <div class="col-md-3">
+                    <div class="green-light-bg">
+                        <img src="images/ICON/Students.png" alt="">
+                        <h5 class="d-flex justify-content-center">1800+Students</h5>
+                        <p class="d-flex justify-content-center"> Learn Anything</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- second section end -->
+
+    <!-- Online Course Section start -->
+    <section>
+        <div class="container">
+            <h4 class="d-flex justify-content-center">Online Course</h4>
+        </div>
+
+
+
+        <div class="container">
+            <div class="card-deck">
+                <div class="card">
+                    <img src="images/Photos/Morder pyschology.png" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title">Mordern pyschology</h5>
+                        <p class="card-text">Designation</p>
+                        <button class="green-button">
+                            Buy Course
+                        </button>
+                        <br>
+                        <br>
+                        <div class="d-flex justify-content-between">
+                            <i class="fa fa-calendar" aria-hidden="true">:Start 20 April,2021</i>
+                            <i class="fa fa-user" aria-hidden="true">60 Seats</i>
+                        </div>
+                    </div>
+                </div>
+                <div class="card">
+                    <img src="images/Photos/Morder psyc.png" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title">Mordern pyschology</h5>
+                        <p class="card-text">Designation</p>
+                        <button class="green-button">
+                            Buy Course
+                        </button>
+                        <br>
+                        <br>
+                        <div class="d-flex justify-content-between">
+                            <i class="fa fa-calendar" aria-hidden="true">:Start 20 April,2021</i>
+                            <i class="fa fa-user" aria-hidden="true">60 Seats</i>
+                        </div>
+                    </div>
+                </div>
+                <div class="card">
+                    <img src="images/Photos/Morder pychons.png" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title">Mordern pyschology</h5>
+                        <p class="card-text">Designation</p>
+                        <button class="green-button">
+                            Buy Course
+                        </button>
+                        <br>
+                        <br>
+                        <div class="d-flex justify-content-between">
+                            <i class="fa fa-calendar" aria-hidden="true">:Start 20 April,2021</i>
+                            <i class="fa fa-user" aria-hidden="true">60 Seats</i>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Online Course Section end -->
+
+    <!-- Testimonial section start -->
+
+    <section>
+        <div class="container">
+            <h4 class="d-flex justify-content-center"> Testimonial</h4>
+        </div>
+        <div class="container testimonial">
+
+            <div class="d-flex justify-content-between align-items-center">
+                <img class="w-25" src="images/Photos/Man.png" alt="">
+
+
+
+                <small>There are many variations of passages of Lorem lpsum available,but the majority have suffared
+                    have suffered attention in same form,by injected humaur,or randomiscd words whick don't look even
+                    slightly believable</small>
+            </div>
+        </div>
+        </div>
+        </div>
+
+    </section>
+
+    <!-- Testimonial section end -->
+
+
+    <!-- footer start -->
+    <footer>
+        <div class="container">
+            <div class="row">
+                <div class="col-md-3">
+                    <small>
+                        Millions of people of all ages and from around the world are improving their lives with us.
+                    </small>
+                </div>
+                <div class="col-md-3">
+                    <ul>
+                        <li><a href="#">Course</a></li>
+                        <li><a href="#"> Grphic Desing</a></li>
+                        <li><a href="#">Web Desing</a></li>
+                        <li><a href="#">Besiness</a></li>
+                        <li><a href="#">Marketing</a></li>
+                        <li><a href="#">Engineering</a></li>
+                    </ul>
+                </div>
+                <div class="col-md-3">
+                    <ul>
+                        <li><a href="">Terms</a></li>
+                        <li><a href="">Graphic Desing</a></li>
+                        <li><a href="">Web Desing</a></li>
+                        <li><a href="">Business</a></li>
+                        <li><a href="">Marketing</a></li>
+                        <li><a href="">Engineering</a></li>
+                    </ul>
+                </div>
+                <div class="col-md-3">
+                    <ul>
+                        <li><a href="#">Useful Link</a></li>
+                        <li><a href="#">Graphic Desing</a></li>
+                        <li><a href="#">Web Desing</a></li>
+                        <li><a href="#">Business</a></li>
+                        <li><a href="#">Marketing</a></li>
+                        <li><a href="#">Engineering</a></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+
+        <div>
+            <h3 class="d-flex justify-content-center" >Contact With Us</h3>
+            <!-- font awesome icon start -->
+            <div class="d-flex justify-content-center">
+                <a href="#"> <i id="icon" class="fa fa-facebook" aria-hidden="true"></i></a>
+                <a href="#"><i id="icon" class="fa fa-twitter" aria-hidden="true"></i></a>
+                <a href="#"><i id="icon" class="fa fa-instagram" aria-hidden="true"></i></a>
+            </div>
+            <!-- font awesome icon end-->
+        </div>
+        <p class="d-flex justify-content-center">Copyright © 2020 Programming-hero.com</p>
+    </footer>
+    <!-- footer end -->
+    <!-- bootstrap JS start -->
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+        integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+        crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
+        integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI"
+        crossorigin="anonymous"></script>
+    <!-- bootstrap JS end -->
 </body>
+
 </html>
